# nl-to-sql_AI_BOT

./: .git_commit_message.txt  .gitignore  LANGGRAPH_ARCHITECTURE.md  README.md  business_rules.json  env.template  pyproject.toml  pytest.ini  python_rules.json  requirements.txt  rule_rag.py  test_config.py  test_config_backup.py  test_python_code_generator.py
.github/workflows/: test.yml
docs/: INTEGRATED_LEARNING_SYSTEM.md  architecture.md  conf.py  index.rst  requirements.txt
docs/api/: src.agentic_flow.agent_graph.rst  src.agentic_flow.async_sql_executor.rst  src.agentic_flow.auto_learning_system.rst  src.agentic_flow.complex_query_validator.rst  src.agentic_flow.composite_entity_extractor.rst  src.agentic_flow.context_analyzer.rst  src.agentic_flow.data_insight_analyzer.rst  src.agentic_flow.database_relationship_analyzer.rst  src.agentic_flow.date_month_extractor.rst  src.agentic_flow.date_utils.rst  src.agentic_flow.dynamic_schema_expander.rst  src.agentic_flow.dynamic_sql_generator.rst  src.agentic_flow.enhanced_entity_extractor.rst  src.agentic_flow.enhanced_rag_mapper.rst  src.agentic_flow.entity_extractor.rst  src.agentic_flow.entity_importance_evaluator.rst  src.agentic_flow.entity_relationship_extractor.rst  src.agentic_flow.fanding_sql_templates.rst  src.agentic_flow.foreign_key_mapper.rst  src.agentic_flow.graph.context.rst  src.agentic_flow.graph.rst  src.agentic_flow.graph.runner.rst  src.agentic_flow.graph.state_machine.rst  src.agentic_flow.graph.utils.rst  src.agentic_flow.graph_simple.rst  src.agentic_flow.integrated_rag_improver.rst  src.agentic_flow.join_optimizer.rst  src.agentic_flow.join_path_engine.rst  src.agentic_flow.join_path_optimizer.rst  src.agentic_flow.keyword_expander.rst  src.agentic_flow.legacy_graph.rst  src.agentic_flow.llm_intent_classifier.rst  src.agentic_flow.monitoring.rst  src.agentic_flow.nodes.rst  src.agentic_flow.performance_monitor.rst  src.agentic_flow.prompt_validator.rst  src.agentic_flow.prompts.rst  src.agentic_flow.relationship_based_sql_generator.rst  src.agentic_flow.relationship_detector.rst  src.agentic_flow.rst  (+30 more)
docs/guides/: setup.md  testing.md
docs/modules/: entity_extractor.md  intent_classifier.md  schema_mapper.md  sql_generator.md  validation_node.md
output/: appendix_query_1.txt  feedback_regeneration.json  final_result.txt  python_code.py  python_code_1.py  python_error.txt  python_result.txt  python_validation.json  regenerated_python_code.py  relative_tables.json  sql_query.json  sql_validation.json
python_codes/: ebe64650-26e5-4d0d-bf9a-21b80d0133e2_0.py  ebe64650-26e5-4d0d-bf9a-21b80d0133e2_1.py  ebe64650-26e5-4d0d-bf9a-21b80d0133e2_2.py
scripts/: check_docs.py  generate_docs.py  health_check.py  update_docs.py
sql_queries/: ebe64650-26e5-4d0d-bf9a-21b80d0133e2.json
sql_query_results/: ebe64650-26e5-4d0d-bf9a-21b80d0133e2.json
src/: __init__.py  debug.py  main.py
src/agentic_flow/: __init__.py  agent_graph.py  async_sql_executor.py  auto_learning_system.py  code_executor.py  complex_query_validator.py  composite_entity_extractor.py  context_analyzer.py  data_dictionary.md  data_insight_analyzer.py  database_relationship_analyzer.py  date_month_extractor.py  date_utils.py  dynamic_schema_expander.py  dynamic_sql_generator.py  enhanced_entity_extractor.py  enhanced_rag_mapper.py  entity_extractor.py  entity_importance_evaluator.py  entity_relationship_extractor.py  fanding_sql_templates.py  feedback_collector.py  foreign_key_mapper.py  graph_simple.py  hybrid_query_processor.py  integrated_rag_improver.py  intent_classification_dataset.json  intent_classification_stats.py  join_optimizer.py  join_path_engine.py  join_path_optimizer.py  keyword_expander.py  learning_data.json  learning_data_integrator.py  legacy_graph.py  llm_intent_classifier.py  llm_output_parser.py  llm_service.py  mapping_patterns.json  monitoring.py  (+28 more)
src/core/: __init__.py  config.py  db.py  error_handler.py  exceptions.py  logging.py
src/monitoring/: alert_system.py  error_monitor.py
src/slack/: __init__.py  bot.py  config.py
statistics_data/daily/: 2025-10-30.json  2025-10-31.json  2025-11-03.json  2025-11-04.json  2025-11-05.json  2025-11-12.json  2025-11-19.json
statistics_data/hourly/: 2025-10-30_17.json  2025-10-30_18.json  2025-10-31_11.json  2025-10-31_12.json  2025-10-31_14.json  2025-10-31_16.json  2025-10-31_17.json  2025-10-31_18.json  2025-11-03_10.json  2025-11-03_11.json  (+22 more)
tests/: test_config_enhanced.py
(+28 files in other folders)
